[gd_scene load_steps=3 format=2]

[ext_resource path="res://BossMonstro.gd" type="Script" id=1]
[ext_resource path="res://assets/Boss1_02.png" type="Texture" id=2]

[node name="Corpo" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 52, -240 )
scale = Vector2( 0.344999, 1.11714 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 352, 768, 344, 496, 272, 496, 96, 88, -24, -344, 24, -808, -96, -1256, -192, -1248, -296, -984, -304, -120, -248, 768 )

[node name="TimerSangue" type="Timer" parent="."]
one_shot = true

[node name="TimerCanhao" type="Timer" parent="."]
one_shot = true

[node name="CanhaoMira" type="Position2D" parent="."]
position = Vector2( 1512, 528 )
scale = Vector2( 1.76, 1.76 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )
[connection signal="timeout" from="TimerSangue" to="." method="_on_TimerSangue_timeout"]
[connection signal="timeout" from="TimerCanhao" to="." method="_on_TimerCanhao_timeout"]
